Fix spacing on auth pages

--- a/static/css/authentication.css
+++ b/static/css/authentication.css
@@ -4,7 +4,6 @@
 }
 
 form {
-    margin-top: 50px;
     max-width: 80%;
     margin-left: auto;
     margin-right: auto;
@@ -33,7 +32,6 @@ form .form-footer {
     form {
         margin-left: 0;
         margin-right: 0;
-        margin-top: 10vh;
         max-width: 470px;
     }
     
