--- a/static/css/sign-in.css
+++ b/static/css/sign-in.css
@@ -1,6 +1,5 @@
 @media (min-width:800px) {
     form {
-        margin-top: 20vh;
         max-width: 340px;
     }
 }
